--- a/.github/workflows/scrape-ir.yml
+++ b/.github/workflows/scrape-ir.yml
@@ -24,7 +24,7 @@ jobs:
         ir[INTDSRJPM193N]="1953-01-01"
         for i in "${!ir[@]}"
         do
-          curl -s "https://fred.stlouisfed.org/graph/fredgraph.csv?mode=fred&ts=12&tts=12&id=INTDSRKRM193N&cosd=${ir[$i]}&fq=Monthly&vintage_date=${NOW}&revision_date=${NOW}&nd=${ir[$i]}" > "interest-rate/${ir[$i]}.csv"
+          curl -s "https://fred.stlouisfed.org/graph/fredgraph.csv?mode=fred&ts=12&tts=12&id=INTDSRKRM193N&cosd=${ir[$i]}&fq=Monthly&vintage_date=${NOW}&revision_date=${NOW}&nd=${ir[$i]}" > "interest-rate/$i.csv"
         done
     - name: Commit and push if it changed
       run: |-
