--- a/.github/workflows/scrape-msci.yml
+++ b/.github/workflows/scrape-msci.yml
@@ -27,8 +27,9 @@ jobs:
         for i in "${!ir[@]}"
         do
           curl -s "https://app2.msci.com/webapp/indexperf/charts?indices=${ir[${i}]}&startDate=${FROM}&endDate=${NOW}&priceLevel=0&currency=0&frequency=D&scope=C&format=XLS&baseValue=false&site=gimi" > ${i}.xls
-          ssconvert ${i}.xls msci/${i}.csv
-          rm ${i}.xls
+          ssconvert historical_data.xls historical_data.csv
+          cat historical_data.csv | tail -n +5 | head -n -19 > msci/${i}.csv
+          rm historical_data.*
         done
     - name: Commit and push if it changed
       run: |-
