--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '5 1,5,9,13,17,21 * * *'
+    - cron: '15 7 * * 1-5'
 
 jobs:
   scheduled:
@@ -27,6 +27,7 @@ jobs:
     - name: Restore packages
       shell: Rscript {0}
       run: |
+        .libPaths("${{ env.RENV_PATHS_ROOT }}")
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
         renv::restore()
 
