--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -24,10 +24,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-renv-
 
-    - name: Install Curl
+    - name: Install system packages
       run: sudo apt install libcurl4-openssl-dev libssl-dev libxml2-dev
       
     - name: Restore packages
+      uses: r-lib/actions/setup-r@v1
+      with:
+        r-version: '3.6.3' # The R version to download (if necessary) and use.
       shell: Rscript {0}
       run: |
         dir.create("${{ env.RENV_PATHS_ROOT }}", recursive = TRUE)
@@ -37,7 +40,7 @@ jobs:
 
     - uses: r-lib/actions/setup-r@v1
       with:
-        r-version: '3.5.3' # The R version to download (if necessary) and use.
+        r-version: '3.6.3' # The R version to download (if necessary) and use.
     - run: Rscript app.R
     
     - name: Commit and push if it changed
