--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -16,10 +16,6 @@ jobs:
     - name: Check out this repo
       uses: actions/checkout@v2
 
-    - uses: r-lib/actions/setup-r@v1
-      with:
-        r-version: '3.6.3' # The R version to download (if necessary) and use.
-
     # https://github.com/actions/cache/blob/main/examples.md#r---renv
     - uses: actions/cache@v2
       with:
@@ -39,6 +35,10 @@ jobs:
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
         renv::restore()
 
+    # - uses: r-lib/actions/setup-r@v1
+    #   with:
+    #     r-version: '3.6.3' # The R version to download (if necessary) and use.
+  
     - run: Rscript app.R
     
     - name: Commit and push if it changed
