--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RENV_PATHS_ROOT: ~/.local/share/renv
+      R_LIBS: ~/.local/share/rlibs
 
     steps:
     - name: Check out this repo
@@ -30,8 +31,8 @@ jobs:
     - name: Restore packages
       shell: Rscript {0}
       run: |
-        dir.create("${{ env.RENV_PATHS_ROOT }}", recursive = TRUE)
-        .libPaths("${{ env.RENV_PATHS_ROOT }}")
+        dir.create("${{ env.R_LIBS }}", recursive = TRUE)
+        .libPaths("${{ env.R_LIBS }}")
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
         renv::restore()
 
