--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -34,6 +34,8 @@ jobs:
         dir.create("${{ env.R_LIBS }}", recursive = TRUE)
         .libPaths("${{ env.R_LIBS }}")
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
+        dir.create("${{ env.RENV_PATHS_ROOT }}", recursive = TRUE)
+        .libPaths("${{ env.RENV_PATHS_ROOT }}")
         renv::restore()
 
     # - uses: r-lib/actions/setup-r@v1
