--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -35,6 +35,7 @@ jobs:
         .libPaths("${{ env.RENV_PATHS_ROOT }}")
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
         renv::restore()
+        Rscript -e "arrow::install_arrow()"
 
     # - uses: r-lib/actions/setup-r@v1
     #   with:
