--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RENV_PATHS_ROOT: ~/.local/share/renv
-      R_LIBS_USER: ~/.local/share/rlibs
 
     steps:
     - name: Check out this repo
@@ -39,7 +38,8 @@ jobs:
     - name: Restore packages
       shell: Rscript {0}
       run: |
-        .libPaths( c(Sys.getenv("RENV_PATHS_ROOT"), .libPaths()))
+        print(paste0("LIB = ","${{ env.RENV_PATHS_ROOT }}"))
+        .libPaths("${{ env.RENV_PATHS_ROOT }}")
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv", repos="https://mran.microsoft.com/")
         renv::restore()
 
