--- a/.github/workflows/scrape-index.yml
+++ b/.github/workflows/scrape-index.yml
@@ -7,8 +7,8 @@ on:
     - cron: '5 1,5,9,13,17,21 * * *'
 
 jobs:
-  scheduled:
-    runs-on: ubuntu-latest
+  scrape-index:
+    runs-on: ubuntu-18.04
     steps:
     - name: Check out this repo
       uses: actions/checkout@v2
