--- a/.github/workflows/scrape-msci.yml
+++ b/.github/workflows/scrape-msci.yml
@@ -7,8 +7,8 @@ on:
     - cron: '11 0 4,14,24 * *'
 
 jobs:
-  scheduled:
-    runs-on: ubuntu-latest
+  scrape-msci:
+    runs-on: ubuntu-18.04
     steps:
     - name: Check out this repo
       uses: actions/checkout@v2
