--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         .libPaths("${{ env.RENV_PATHS_ROOT }}")
         .libPaths()
+        chooseCRANmirror(ind=1)
         if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
         renv::restore()
 
