--- a/.github/workflows/scrape-r.yml
+++ b/.github/workflows/scrape-r.yml
@@ -16,11 +16,6 @@ jobs:
     - name: Check out this repo
       uses: actions/checkout@v2
   
-    # - uses: r-lib/actions/setup-r@v1
-    #   with:
-    #     r-version: '4.0.3' # The R version to download (if necessary) and use.
-    # - run: Rscript -e 'print("hello")'
-
     # https://github.com/actions/cache/blob/main/examples.md#r---renv
     - uses: actions/cache@v2
       with:
@@ -44,6 +39,7 @@ jobs:
         renv::restore()
 
     - name: run hello
+      working-directory: ~/work/stock-now
       run: Rscript hello.R
     
     - name: Commit and push if it changed
